# locutus_utilities

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  resources.py
data/: included_ontologies.csv  manual_ontology_transformations.tsv  ontology_api.csv  seed_data.csv
data/examples/: mapdragon_config.json  mapdragon_config.yaml
data/input/ontology_data/: README.md  included_ontologies.csv  locutus_system_map.csv  manual_ontology_transformations.csv  manual_ontology_transformations.tsv  ontology_api.csv  seed_data.csv
data/output/: .gitignore  database_ontology_metadata.csv
data/seed_etl/: acr-EnumAccessCode.csv  concept_map_relationship.csv  ftd-acr-enum-family-role.csv  ftd-acr-enum-relationship-code.csv  ftd-no-mapping.csv  seed_config.yaml  ucum_common_units.csv
data/seed_etl/reference_only/: README.md  acr-EnumAccessType.csv  acr-EnumAssertionType.csv  acr-EnumAvailabilityStatus.csv  acr-EnumConsanguinityAssertion.csv  acr-EnumDateOfBirthType.csv  acr-EnumEthnicity.csv  acr-EnumFamilyType.csv  acr-EnumRace.csv  acr-EnumSex.csv  acr-EnumSubjectType.csv  acr-EnumVitalStatus.csv  (+1 more)
src/locutus_util/: README.md  __init__.py  _version.py  analyze_ontology_data.py  common.py  create_ontology_api_collection.py  create_ontology_definition_lookup_table.py  delete_project_data.py  dispatcher.py  drop_data.py  drop_seed_data.py  helpers.py  ontology_api_etl.py  resources.py  run_makefile.py  seed_data_etl.py
src/tools/: create_ontology_api_collection.py  create_ontology_definition_lookup_table.py
storage/lookup_tables/: ontology_definition.csv
tools/: create_ontology_api_collection.py  create_ontology_definition_lookup_table.py
(+21 files in other folders)
