[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "locutus_utilities"
description = "Tools that facilitate the development and maintenance of Locutus"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = ["requests",
                "pandas",
                "google-cloud-firestore"
                ]

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[tool.setuptools.package-data]
"ontology_api_lookup" = ["storage/lookup_tables/ontology_definition.csv"]

[project.scripts]
collect_ontologies = "locutus_util.create_ontology_definition_lookup_table:main"
ontologies_to_firestore = "locutus_util.create_ontology_api_collection:main"