[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "locutus_utilities"
description = "Tools that facilitate the development and maintenance of Locutus"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = ["requests",
                "pandas",
                "google-cloud-firestore"
                ]

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.scripts]
utils_run = "locutus_util.dispatcher:main"
sideload_run = "locutus_util.sideload.mapping_loader_table:main"